# cat-12

./: .flake8  .gitignore  ASSESSMENT_REPORT.md  CHANGELOG.md  LICENSE  Makefile  README.md  activate_cat12.sh  bids_cat12_processor.py  demo_openneuro_ds003138.sh  example_usage.py  install_cat12_fixes.patch  install_cat12_standalone.sh  nohup.out  pyproject.toml  requirements.txt  run_cat12.sh  run_demo_openneuro_ds003138.sh  test_installation.sh
.github/instructions/: repo.instructions.md
config/: cat12_segmentation_config.json  config.ini  processing_config.yaml
docs/: BIDS_APP_USAGE.md  CAT12_COMMANDS.md  PROJECT_SUMMARY.md  QUICK_START.md  conf.py  installation.md
docs/usage/: preprocessing.md  statistics.md
reports/: test_report.html
scripts/: install_cat12_matlab.sh  install_cat12_standalone.sh  longitudinal_template.m  subject_processor.py  test_installation.sh
scripts/cat12_longitudinal/utils/: read_config_ini.m  run_tfce_correction.m
scripts/preprocessing/: bids_cat12_processor.py
scripts/stats/: cat12_longitudinal_analysis.sh  post_stats_report.py  summarize_tfce.py
scripts/stats/utils/: cat12_threshold_maps.m
stats/: cat12_longitudinal_analysis.sh
templates/: longitudinal_template.m
utils/: bids_utils.py  cat12_utils.py  generate_boilerplate.py
